--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,21 +3,20 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - aws cloudformation create-stack --stackname Auto-Infrastacture --template-body file://infrastracture/ec2.yaml --parameters file://infrastracture/ec2.json
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 212914134641.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - REPOSITORY_URI_NGINX=212914134641.dkr.ecr.eu-south-1.amazonaws.com/ecrnginx
       - REPOSITORY_URI_WORDPRESS=212914134641.dkr.ecr.eu-south-1.amazonaws.com/ecrwordpress
+      - REPOSITORY_URI_APACHE=212914134641.dkr.ecr.eu-south-1.amazonaws.com/ecrapache
   build:
     commands:
-      - echo Building the Nginx Docker image...
-      - docker build -f Dockerfile.nginx -t nginx-custom .
-      - echo Building the WordPress Docker image...
-      - docker build -f Dockerfile.wordpress -t wordpress-custom .
+      - echo Building apache Docker image...
+      - docker build -f Dockerfile.apache -t apache-image .
+      - echo Building wordpress Docker image...
+      - docker build -f Dockerfile.wordpress -t wordpress-image . 
   post_build:
     commands:
-      - echo Tagging and pushing the Nginx Docker image...
-      - docker tag nginx-custom:latest $REPOSITORY_URI_NGINX:latest
-      - docker push $REPOSITORY_URI_NGINX:latest
-      - echo Tagging and pushing the WordPress Docker image...
-      - docker tag wordpress-custom:latest $REPOSITORY_URI_WORDPRESS:latest
+      - docker tag wordpress:latest $REPOSITORY_URI_WORDPRESS:latest
       - docker push $REPOSITORY_URI_WORDPRESS:latest
-      - echo Build and push completed on `09/04/24`
+      - docker tag Apache:latest $REPOSITORY_URI_APACHE:latest
+      - docker push $REPOSITORY_URI_APACHE:latest
+      - echo Build and push completed on `date`
