--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - aws cloudformation create-stack --stack-name Auto-Infrastacture --template-body file://infrastracture/ec2.yaml --parameters file://infrastracture/ec2.json --capabilities "CAPABILITY_AUTO_EXPAND" "CAPABILITY_NAMED_IAM" "CAPABILITY_IAM"
+      - aws cloudformation create-stack --stack-name Auto-Infrastracture --template-body file://infrastracture/ec2.yaml --parameters file://infrastracture/ec2.json --capabilities "CAPABILITY_AUTO_EXPAND" "CAPABILITY_NAMED_IAM" "CAPABILITY_IAM"
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 212914134641.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI_WORDPRESS=212914134641.dkr.ecr.eu-south-1.amazonaws.com/ecrwordpress
       - REPOSITORY_URI_APACHE=212914134641.dkr.ecr.eu-south-1.amazonaws.com/ecrapache
